have to fix overflow

--- a/fe/pong/src/Components/Signup.css
+++ b/fe/pong/src/Components/Signup.css
@@ -1,18 +1,22 @@
 .signup-div {
-    padding: 1rem 0;
-    width: 40%;
-    margin-left: 30%;
-    margin-top: 2rem;
-    text-align: center;
-    align-items: center;
-    color:white;
-    border: 2px solid white;
-    border-radius: 6px;
+  padding: 1rem 0;
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 2rem;
+  text-align: center;
+  align-items: center;
+  color: white;
+  border: 2px solid white;
+  border-radius: 6px;
 }
 
 .input {
-    width: 40%;
-    display: flex;
-    text-align: center;
-    margin: 1rem 0 1rem 30%;
+  width: 40%;
+  display: flex;
+  text-align: center;
+  margin: 1rem 0 1rem 30%;
+}
+
+#id {
+  overflow: visible;
 }
